worked on thesis some more

--- a/thesis/thesis/sections/intro.tex
+++ b/thesis/thesis/sections/intro.tex
@@ -1,15 +1,24 @@
 \section{Introduction}
 %Storytelling is important
 %Creativity is important
-According to ... %TODO cite source
-there are two types of creativity. There is personal creativity (or
-\emp{p-creativity}), where an idea is considered novel on a personal level, and
-there is historical creativity (\emp{h-creativity}), where the idea has to be
+Creativity is seen as being closely correlated with intelligence (either
+creativity being a component of intelligence, or the other way around).
+However, many feel that computer programs cannot be creative. Because of the
+previously outlined correlation, this also discounts the field of artificial
+intelligence by stating it is not "truly" intelligent.
+
+According to Boden (\cite{Boden1998347})
+there are two types of creativity. There is psychological creativity (or
+\emph{p-creativity}), where an idea is considered novel on a personal level, and
+there is historical creativity (\emph{h-creativity}), where the idea has to be
 novel on a historical level (i.e., have other people in history come up with the
 same idea?).
 In computational creativity, usually a form of p-creativity is considered, since
 to have an h-creative system would require to put in all history of that
-subject.
+subject. However, this does not mean that algorithms can not produce h-creative
+work.
+
+%Many forms of creativity (painting, sculpting, story generation)
 
 The approach used in this paper is a form of instance-based learning, where the
 rules are learned from the story database itself. This has the advantage that
@@ -18,3 +27,7 @@ which is a good metric if one considers p-creativity. Furthermore, the more data
 will be added, the more the rule distribution of the model will start to match 
 the actual historical use of the rules, which would bring the system closer to
 h-creativity.
+
+From another perspective, one could say that this is analogous to how human
+writers write (they read a lot of stories or have real-life experiences and 
+recombine elements in novel and exciting ways).
