--- a/thesis/thesis/sections/related_work.tex
+++ b/thesis/thesis/sections/related_work.tex
@@ -1,4 +1,14 @@
 \section{Related Work}
 
-There have been many approaches to computational creativity (for example ) %TODO references
+There have been many approaches to computational creativity. For example, there
+is the work by Gerv\'as et al. (\cite{Gervas2005235}) that uses case-based
+reasoning with a representation based on the work of Propp (\cite{propp1968morphology}).
+The model proposed in this paper is more general, however, since there is very
+little domain knowledge involved (just the content of the stories themselves).
+This makes this model more generally applicable outside of the folk tale domain.
 
+The work in this paper is mainly inspired by the MEXICA story generator. %TODO cite
+However, in MEXICA the relations between characters were much simpler, and 
+all possible actions had to be pre-defined. In this work, the focus is more on
+the rule-extraction side, whereas MEXICA was more focused on the generation of
+the stories.
