--- a/thesis/thesis/thesis.tex
+++ b/thesis/thesis/thesis.tex
@@ -1,23 +1,90 @@
 \documentclass{article}
-\title{Thesis}
-\author{Sander Nugteren}
-\date{\today}
+\usepackage{graphicx, color}
+\usepackage[a4paper,margin=2cm]{geometry}
+\usepackage{tikz}
+\usetikzlibrary{positioning,calc}
 
-\usepackage{amsmath}
-\usepackage{amsfonts}
+\newcommand{\red}[1]{{\color{red}{#1}}}
 
 \begin{document}
 
-\maketitle
 
-%\input{sections/intro.tex}
+\begin{titlepage}
+
+\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for the horizontal lines, change thickness here
+\center % Center everything on the page
+ 
+%----------------------------------------------------------------------------------------
+%	HEADING SECTIONS
+%----------------------------------------------------------------------------------------
+
+\includegraphics[width=\linewidth]{../images/uvaENG}\\[2.5cm]
+\textsc{\Large MSc Artificial Intelligence}\\[0.2cm]
+\textsc{\normalsize Track: Learning Systems}\\[1.0cm] % track
+\textsc{\Large Master Thesis}\\[0.5cm] 
+
+%----------------------------------------------------------------------------------------
+%	TITLE SECTION
+%----------------------------------------------------------------------------------------
+
+\HRule \\[0.4cm]
+{ \huge \bfseries \red{PrInCESS: extracting rules from story synopses}}\\[0.4cm] % Title of your document
+\HRule \\[0.5cm]
+ 
+%----------------------------------------------------------------------------------------
+%	AUTHOR SECTION
+%----------------------------------------------------------------------------------------
+
+by\\[0.2cm]
+\textsc{\Large Sander Nugteren}\\[0.2cm] %you name
+\red{6042023}\\[1cm]
+
+
+%----------------------------------------------------------------------------------------
+%	DATE SECTION
+%----------------------------------------------------------------------------------------
+
+{\Large \today}\\[1cm] % Date, change the \today to a set date if you want to be precise
+
+\red{42 EC}\\ %
+\red{April 2015-June 2016}\\[1cm]%
+
+%----------------------------------------------------------------------------------------
+%	COMMITTEE SECTION
+%----------------------------------------------------------------------------------------
+\begin{minipage}[t]{0.4\textwidth}
+\begin{flushleft} \large
+\emph{Supervisor:} \\
+\red{Dr. F.M. (Frank) \textsc{Nack} }% Supervisor's Name
+\end{flushleft}
+\end{minipage}
+~
+\begin{minipage}[t]{0.4\textwidth}
+\begin{flushright} \large
+\emph{Assessor:} \\
+\red{Dr A  \textsc{Person}}\\
+\end{flushright}
+\end{minipage}\\[2cm]
+
+%----------------------------------------------------------------------------------------
+%	LOGO SECTION
+%----------------------------------------------------------------------------------------
+
+\framebox{\rule{0pt}{2.5cm}\rule{2.5cm}{0pt}}\\[0.5cm]
+%\includegraphics[width=2.5cm]{figure}\\ % Include a department/university logo - this will require the graphicx package
+\textsc{\large \red{institute name}}\\[1.0cm] % 
+ 
+%----------------------------------------------------------------------------------------
+
+\vfill % Fill the rest of the page with whitespace
+
+\end{titlepage}
+\input{sections/intro.tex}
+\input{sections/related_work.tex}
 \input{sections/model.tex}
-%\input{sections/experiments.tex}
-%\input{sections/results.tex}
-%\input{sections/conclusion.tex}
-%\input{sections/discussion.tex}
+\input{sections/future_work.tex}
 
-%\bibliographystyle{plain}
-%\bibliography{thesis.bib}
+\bibliographystyle{plain}
+\bibliography{thesis.bib}
 
 \end{document}
