--- a/thesis/thesis/sections/intro.tex
+++ b/thesis/thesis/sections/intro.tex
@@ -1,11 +1,11 @@
 \section{Introduction}
-%Storytelling is important
 %Creativity is important
+
 Creativity is seen as being closely correlated with intelligence (either
 creativity being a component of intelligence, or the other way around).
 However, many feel that computer programs cannot be creative. Because of the
 previously outlined correlation, this also discounts the field of artificial
-intelligence by stating it is not "truly" intelligent.
+intelligence by stating it can never be "true" intelligence.
 
 According to Boden (\cite{Boden1998347})
 there are two types of creativity. There is psychological creativity (or
@@ -18,16 +18,43 @@ to have an h-creative system would require to put in all history of that
 subject. However, this does not mean that algorithms can not produce h-creative
 work.
 
-%Many forms of creativity (painting, sculpting, story generation)
+There are many ways in which creativity can be expressed. In fact, any idea that
+is considered to be novel and to have some kind of value (monetary, aesthetic) is
+considered an expression of creativity. However, creativity is mostly used with regards to
+the arts, such as painting, sculpting, poetry and storytelling. In these
+artistic fields, creativity can be seen as a problem with two opposing
+objectives. One the one hand, the idea has to be novel, which means that it must be different from
+the existing works. On the other hand, it should still be comprehensible with
+respect to the rules and conventions of the art (generating a story filled with
+gibberish or a painting with random pixels is not a valuable contribution to the
+art, since it has no meaning).
 
-The approach used in this paper is a form of instance-based learning, where the
+%Storytelling is important
+Storytelling is an important part of human cultures around the world.
+Stories are used to preserve history and culture, and are used to transfer values
+and experiences across generations, encouraging a broadening of horizons through
+identifying with the characters in the story, and relating these experiences to
+the real world around them. The universalness of storytelling seems to imply
+that it is something fundamentally human to do, which might tie it (like
+creativity) intothe way the human thought process.
+%TODO cut down on/rewrite bullshit
+
+The approach used in this thesis is a form of instance-based learning, where the
 rules are learned from the story database itself. This has the advantage that
 the creativity of a rule is dependent on which stories have already been seen,
 which is a good metric if one considers p-creativity. Furthermore, the more data
 will be added, the more the rule distribution of the model will start to match 
-the actual historical use of the rules, which would bring the system closer to
+the actual historical use of rules and tropes, which would bring the system closer to
 h-creativity.
 
 From another perspective, one could say that this is analogous to how human
-writers write (they read a lot of stories or have real-life experiences and 
-recombine elements in novel and exciting ways).
+creative writing process works (authors read a lot of stories or have real-life
+experiences and recombine elements in their own stories in novel and exciting ways).
+
+The ruleset extracted in this way can be used both in a fully automated story
+generator, where an algorithm uses the rules and their associated probabilities
+to generate a story with minimal human input or even none at all, or it could be used as a component
+of a recommender system for writers (like the co-creative approaches detailed in
+\cite{kantosalo2014isolation}), where it recieves the story the author
+wrote and makes suggestions to help further plot development, or augment the
+story to make it more interesting.
